tests/reference/asr-generics_array_04-c5cb92d.stderr
semantic error: Type mismatch in binary operator; the types must be compatible
 --> tests/../integration_tests/generics_array_04.py:4:12
  |
4 |     return a + b
  |            ^   ^ type mismatch (T and T)
